    HAMA-25: Add matrix addition example (edwardyoon)
    HAMA-23: Add Hama configuration files (edwardyoon)
    HAMA-6: Add a 'who we are' page (edwardyoon)
    HAMA-7: Add some information for a new comer (edwardyoon)
    HAMA-1: Create the Hama web site (edwardyoon via Ian Holsman)
    HAMA-2: The intial donation of Hama from the google project (edwardyoon)

  IMPROVEMENTS

    HAMA-232: Add file multiplication example (edwardyoon)
    HAMA-226: Add benchmarking tool of eigenvalue operation (edwardyoon)
    HAMA-223: Add simple admin tool for manage the temporary tables (edwardyoon)
    HAMA-202: Replacement for deprecated API of Map/Reduce (edwardyoon)
    HAMA-206: Replacement of JacobiEigenValueMap/Reduce (edwardyoon)
    HAMA-217: Replacement of Block Multiplication Map/Reduce (edwardyoon)
    HAMA-205: Replacement of NormMap/Reduce (edwardyoon)
    HAMA-207: Replacement of Mat-Mat addition Map/Reduce (edwardyoon)
    HAMA-208: Replacement of vector-matrix multiplication Map/Reduce (edwardyoon)
    HAMA-216: Removing JobManager in util package (edwardyoon)
    HAMA-215: Removing hama shell from version 0.2 (edwardyoon)
    HAMA-204: Replacement of TransposeMap/Reduce (edwardyoon)
    HAMA-213: Replacement of TableReadMapper (edwardyoon)
    HAMA-203: Replacement of RandomMatrixMap/Reduce (edwardyoon)
    HAMA-197: Replacement for deprecated API of Hbase (edwardyoon)
    HAMA-188: Upgrade dependencies for hadoop/hbase 2.0 (edwardyoon)
    HAMA-192: Refactor top-level package (edwardyoon)
    HAMA-189: Update website (edwardyoon)
    HAMA-187: Add matrix subtraction test case (edwardyoon)
    HAMA-186: Add density option for random matrix (edwardyoon)
    HAMA-171: Implementation of Matrix.Norm (samuel)
    HAMA-178: Add example of norm (edwardyoon)
    HAMA-158: Implementation of random sparse matrix (edwardyoon)
    HAMA-164: Example for C = Alpha*B + A (edwardyoon)
    HAMA-154: Combine multi-mapreduce jobs into a single mapreduce job 