@@ -11,12 +11,11 @@
 <link media="print" type="text/css" href="skin/print.css" rel="stylesheet">
 <link type="text/css" href="skin/profile.css" rel="stylesheet">
 <script src="skin/getBlank.js" language="javascript" type="text/javascript"></script><script src="skin/getMenu.js" language="javascript" type="text/javascript"></script><script src="skin/fontsize.js" language="javascript" type="text/javascript"></script>
-<link rel="shortcut icon" href="images/favicon.ico">
-<script type="text/javascript" language="javascript" src="skin/getBlank.js"></script><script type="text/javascript" language="javascript" src="skin/getMenu.js"></script><script type="text/javascript" language="javascript" src="skin/fontsize.js"></script><script src="http://www.google-analytics.com/urchin.js" type="text/javascript"></script><script type="text/javascript">
+<script type="text/javascript" src="http://www.google-analytics.com/urchin.js"></script><script type="text/javascript">
 _uacct = "UA-2482311-4";
 urchinTracker();
-
 </script>
+<link rel="shortcut icon" href="images/favicon.ico">
 </head>
 <body onload="init()">
 <script type="text/javascript">ndeSetTextSize();</script>
@@ -250,12 +249,17 @@ document.write("Last Published: " + document.lastModified);
 <a href="http://wiki.apache.org/hama/GettingStarted">Getting Started</a> with Hama</li>
     
 </ul>
-</div>    
+</div>
     
 <a name="N10065"></a><a name="Recent+News"></a>
 <h2 class="h3">Recent News</h2>
 <div class="section">
 <ul>
+      
+<li>24 January 2010 - We submitted the paper to "USENIX Workshop on Hot Topics in Parallelism (HotPar '10)"</li>
+      
+<li>11 December 2009 - We'd implemented, introduced the BSP (Bulk Synchronous Parallel) package 
+      [<a href="http://people.apache.org/~edwardyoon/papers/Apache_HAMA_BSP.pdf">pdf</a>]</li>
       
 <li>20 May 2008 - Hama accepted to Apache Incubator Project.
       <br>&nbsp;&nbsp;
