@@ -58,10 +58,10 @@ endobj
 >>
 endobj
 14 0 obj
-<< /Length 1987 /Filter [ /ASCII85Decode /FlateDecode ]
+<< /Length 2258 /Filter [ /ASCII85Decode /FlateDecode ]
  >>
 stream
-Gat%$968iI%)2U?kh+0;X@Q3QFA+K[^:'SMmFaX=pE7Y<c)i:<on])e^X/1;*f`%eQjeNV!'^I:hJH;3mfS>ci]<QaQ0[d<e8aH.3fsesJpW/s_V(a1hleGRmG'D1hLG2Q.s&D)P#CQ2[I]Hcq6^!8Zhb3.CCT`6XgH,?."oJWR8,T*c?Am$l<T1h>%AS;;8Rr$oL#.g*PgEVIr_,9:-=S?,!TD11<p5:Ci"PAeENc)\r>)F*Di1"rE8;+rSod3n%>Zk.`u"5X&AB0As"L0Q0LX]B($E]5NBF6)]HP@Lj*$pbkaWgS\'&9glSbc^GIPMon`7:0c9Hh)4;Y+p3D$H+KONX`qNT\qjCE/%ZVO$k(BJ8UtWiUjnF+7<?dr;nG47>dcOq?N4&%qHplA-Qj\Edq8B[#0kY[/;:osgW-/G'dHRV[)lk]"WV*M5>l]o9NQOk]fb'jgAh3-rgJp*o0Mi1r.Rp\8EAXI:ll8_Vi"fm4#A5agN4j("<kL^7E_sloJk*,%$iHD(eoK"J*O2Z/,X]T"q$d!$-d;&-Pqi;:L'.$O!RX>I4VR`[V:BQR8B^9tn)R>WqbbErm67NkNB&q^[W5`Df\AU3Ut#4p2GuKoJ,shm:3Ekd.JHO$Ng-_uTs[J**\^F1Ljm<A;9H85=3F9(TFa"]\39#&J+'He'?ssh-<9?XJ<D;nrPm6)8a$E)fibdA\Wb83%P"_m"G\X<*n3ZY@JN@EW<-rf@'1VL(bR9TN#`%\\ID&e)+mZX*KMD]?UDq>TMO.")3g/'`5,[[;rhFo#%m:bLLOZaKGo-H6rtFS96@k&_ILM2@24B=S:^lD;\Hsi=;.iTj!m(u3fFYKm:?Js<jGgm*Wag4r^GnI!e7!GSgGN=M[FcWNM*PcW=8BAg0/8/E=lf_5hHFVR^iHGhTeE+*7q([>fU1mJF]&rQ^c]Nf<e&9O,CPAMM75)cqjC6Vni0)@`Z6&eJ_HA.uPliVFusA[!l,"F^2+o')YF'(70'E"a^h#ddeGD#?$P.W1$BSGcN@eVQ-7<W$S'rn-$Pq#W_=pZ`Nd]QS>@e?I\Tr+I+%3#a2FH\0c-R%c\OT>YcJZ"Fq3Y,32.CI3')U*Z2+05M/!;)*?10Vs<WeS0'SVPNLt8VAf>L"XJ]Cg=$JD`nnne-I',\oB'o)0\puf7fjMj]'4r=KNZ4;_UHPX$56;,I,f*hmWAUKZr#&qH4iE3j)\54doK7;*VSF\4M1i!_ZuOdVrE7Z*kG&\?;rTqg'Jrjm>Ja_TKn$..lqRo+kHS$`!K%m&7I*W+\mEO#s<=RqPu^pbC"9&F[TZa#KWP,)EtCH,C[^?:paBD&VXM#hNo(=CWpogZaq#EA>iR$,#?bqMeAu3MSiqR1\]jspat+t6AHcF1/7(]A8ppEDsHIF9jd>8TH<-=lVT=(fK-7t*^7-R'+Odunki+544ueMhk^SaIG%nXKGa.*1Q\6/9O;_,[nGrnX:i5IrIT"8%hBP=_>@]o\E^%P-p^>";PLIJZ]ROlD\1903uNT"&$dU&B^ZF7+g9"WffMf;]#?=di>]VcDdK?IL]-?9]Y=T!OlJn=Eb1f[^YaLP^&'qP3Y.qp"::;J:7nEmFHPcuPjs%Z8Gc*kdGhUg=%.B<C"Bl<'C3OAr_.pYVe#X_mc-$&a*;s<Eoj=a9-':d);m#\0?*$qkO(:3HG9k\OSaHSRcf83;POF4;5XbQOTLSM<%u[m(IY.'s89H=Vld@]\K%0>K!D'o9O%E%4*s8(B.cuk:f.._k'5`57KS>(bR"TrK]Vk`'m`V?U$K%`4o^j2_W9(*-jX3;'!*b8_m6K)_a[^Xm/ZS/^.TX%J`!k@\,NH3?2)0Wh2tDqD/FkO)?ua(hn$!s"!0fn;7CmPOcTb%a3P8<7SD]%+U@IL5=M-7Ej\+gGo5',$<capZg+m&?$/<8?'oNaY1NND4EmFbg7<RrA\2R6+@tjD1lDRM5\jNDr))m<M;A1WVco_~>
+Gat%$=``=U&:W67i8c3S9T0N*GWjbuS?'cAOkOn(c3$L$&o3V;H._f)n++DKLFeEl6l>ggJSu@:\6^cDh7<gP`&(NLKk]lhe1fjB)SQMn%^u_O*+K^&5Mo:X@9bS">(?,m.5JF__]k8cL%3>gI9sQn/cGq<$K8msOg[7>*67!F9IlP<A%hYIESYAANFlHHUP-7=dZ6[6ZjP[Gg8"V2EFN'E'=iT+M]g-,Z%;b^O4%")Z3]G&D28htqhrZ`qYgQpG8b30j[Breb<g$p@NIu_.ACYnWjOYh++g%[$PKH9(i6!Aeb<*VXh/mM9TQF/^Gs=+kRldm!>tAL1,;-2mBRkj,HHG@^unfnq\b]&#*'[pVh5[0@CZl:_sc0JU&sSi!jD>"Bj0m]M_Wp\"pYj5m8O(%h^55?M(,b=M8Gk+a(U*iL,)NIU:)!+/#5;gK*/p:\r;e=,^RD,N`h9dP\eL"*`u8>`6&=iT5`;T`+pA&-0WU3>RsSJp_3A0+^+d[*QUDOpR6CR]0F0)&RdQK1sl?9>"R.T/=k(*gYmh=D7VK7+3SV2IO!dX;-?Ws5EFgp0Hd0'FY#K2&1+qSaBNa*<KGk(91g/6YB=Y6+%9;Qls1:(b@/1OG7gZOZ:ogR.Wl!S942FE;MP>YM?)$WJ'JE6kL6Y/,m4Q`?%nbr`qL"`Jhj7\CfR9g%I-jNqbFV>0MLKZY46$RS!r,)Aig*[=D+9:+2G6]>t_#[+&tB,i&Uio*TDG&/3n,i0<!*s3LW`?Ecg,Wh^A=A>#k]1Z@5E=FMn7kAce>D*ih%MEJE7iH<-**OVMqZjfUI2f39Xc8o,2B`uu5]!5L'V6<G,+_ppB07#)gN)'P`F8AN>Fj>350MCQmE;9`SNHN4&JM8f6@5\I85<;+n.@G4Hs[8Q$)<AOhuF9&@NY01.[ZPOV$[4XV?nX$ifIL^k<W_GGFodI+3EK@taVPMMmV`Q&3@/Y1%jOUPM%4^b%7?oZO9+GnZ5IA!_XOeBlI`>4t'Op>7[X?Z(jXk?T@YsR#BI_tn[4G0N<OF=?8kooD!oQ7/%.E7K<a(e\(fW`CYO<n_Q0f/*P-A4O-#XNQEXjtY,F,hE;!H?%.RsL8IK8jg0ORqq\$ME"G!8>*;/7QAI#k4LWm3t+2>YueO9d1KFu.X-I1V*-RUm(AF`0K#h,q*S>SoWXl%]%fBuA1hlXN57nYu-N`Ei)jC'QH&69.QnU[[4^T;pTs=u@n>\pK41eSFG"p$OR-@rYQdpWU2UcN<`n[XuRsr?*cp-kN%;7GIJq7%5:]3'f!5*3Ts`&1>2M&/lS^rCoE9o6`7NlL;KY%i+:WKODM_Clb,a[@,>QLUj_ZF-)VPL1W>U;H&!LWh2Lp&LuCP<+odCf&NYoMJiY\A%h_[q>T-H^CdWm*qDH8BXM8MU0t-7Wnf7(10NiZ0ZWLL]aM.(E.CDAO-SXOKmSUPk1A+q^NfG"&AfERd.7;L&l*'IV+T]b5a6MQUVojTT8EJ]4=A-f-,`&(Z$D6pdCcX+*m+*G%f:`]*Ze/:H;;>*-526.34d12%i\GE[Q3<;B;>:kk?O,L.Eh?K)@A2i=,jp#/%f4LWMAfWYRR)h<5SD!B^;i<&"9!+4n#%(Xj(c>%&M>&5g(e/Rlk3ZJKb@eOm;1b;Q+jh_(TTsdgBtSmP=SK1kB1^EjR<]N-VE?XBn6iH@t(k!rSka-tc7j*11dXmp+mC"8$Zm@l1VFeU<rP9;pe"H"RErI0!alWg73?:,pIu3V#PnG&.EQXh#prXC*briVS=m\DMo],@_nDc&DJETREt#T\]Hm#@,r>4NF//fujYH:#8X:;*677rA36UDdH^c(A=600]G(i/B8J4Eb-*m^L,f&h0bW0S\'?O":5bdLgR$<8^FO1+JJ'_U;^-C/+_a'dO\stL"b9+IYl!=QAKuUkOBBWLL>PWEoj)'Tt6XAAsd19(u\:b?8]dZ_FYt=%t`U*lI.R+F=!2QpScXtJ3*b8kYZl%%\4^tFnsXu3BMB59$QniMueZnH47fX'C>&gOe%n2AKF/5H_05B#E/d"`L5ZsNX<n0#7Jj5>f](Nr+>s>EId#\-B[U,hfW%&VYe]BLA)'m!S.@_CKapL_054SZSeeM>Nfk3WimGqACJOFBN%(GmlIqKD@])u;6q9JLrWb<isXbQ+mX!_j5:sF*\,V$/DBLW4ES9J"_'Ai?X6\j?gXE:I&Pf.q-M3\n^P:32_2AC9K)Q?:QX5fTK[,H3VjN%a<&<TW7_%Z\:GSP~>
 endstream
 endobj
 15 0 obj
@@ -80,8 +80,9 @@ endobj
 19 0 R
 20 0 R
 21 0 R
-22 0 R
-23 0 R
+24 0 R
+25 0 R
+26 0 R
 ]
 endobj
 17 0 obj
@@ -131,7 +132,30 @@ endobj
 21 0 obj
 << /Type /Annot
 /Subtype /Link
-/Rect [ 193.656 275.798 232.32 263.798 ]
+/Rect [ 154.308 262.598 170.304 250.598 ]
+/C [ 0 0 0 ]
+/Border [ 0 0 0 ]
+/A 23 0 R
+/H /I
+>>
+endobj
+22 0 obj
+<<
+/Type /FileSpec
+/F (http://people.apache.org/~edwardyoon/papers/Apache_HAMA_BSP.pdf)
+>>
+endobj
+23 0 obj
+<<
+/S /GoToR
+/F 22 0 R
+/D [ 0 /XYZ null null null ] 
+>>
+endobj
+24 0 obj
+<< /Type /Annot
+/Subtype /Link
+/Rect [ 193.656 222.998 232.32 210.998 ]
 /C [ 0 0 0 ]
 /Border [ 0 0 0 ]
 /A << /URI (http://wiki.apache.org/hama/ScaLAPACK)
@@ -139,10 +163,10 @@ endobj
 /H /I
 >>
 endobj
-22 0 obj
+25 0 obj
 << /Type /Annot
 /Subtype /Link
-/Rect [ 411.636 275.798 476.964 263.798 ]
+/Rect [ 411.636 222.998 476.964 210.998 ]
 /C [ 0 0 0 ]
 /Border [ 0 0 0 ]
 /A << /URI (http://www.netlib.org/scalapack/)
@@ -150,10 +174,10 @@ endobj
 /H /I
 >>
 endobj
-23 0 obj
+26 0 obj
 << /Type /Annot
 /Subtype /Link
-/Rect [ 367.632 262.598 482.94 250.598 ]
+/Rect [ 367.632 209.798 482.94 197.798 ]
 /C [ 0 0 0 ]
 /Border [ 0 0 0 ]
 /A << /URI (./developers.html)
@@ -161,57 +185,57 @@ endobj
 /H /I
 >>
 endobj
-25 0 obj
+28 0 obj
 <<
  /Title (\376\377\0\61\0\40\0\111\0\156\0\164\0\162\0\157\0\144\0\165\0\143\0\164\0\151\0\157\0\156)
- /Parent 24 0 R
- /Next 26 0 R
+ /Parent 27 0 R
+ /Next 29 0 R
  /A 9 0 R
 >> endobj
-26 0 obj
+29 0 obj
 <<
  /Title (\376\377\0\62\0\40\0\107\0\145\0\164\0\164\0\151\0\156\0\147\0\40\0\123\0\164\0\141\0\162\0\164\0\145\0\144)
- /Parent 24 0 R
- /Prev 25 0 R
- /Next 27 0 R
+ /Parent 27 0 R
+ /Prev 28 0 R
+ /Next 30 0 R
  /A 11 0 R
 >> endobj
-27 0 obj
+30 0 obj
 <<
  /Title (\376\377\0\63\0\40\0\122\0\145\0\143\0\145\0\156\0\164\0\40\0\116\0\145\0\167\0\163)
- /Parent 24 0 R
- /Prev 26 0 R
+ /Parent 27 0 R
+ /Prev 29 0 R
  /A 13 0 R
 >> endobj
-28 0 obj
+31 0 obj
 << /Type /Font
 /Subtype /Type1
 /Name /F3
 /BaseFont /Helvetica-Bold
 /Encoding /WinAnsiEncoding >>
 endobj
-29 0 obj
+32 0 obj
 << /Type /Font
 /Subtype /Type1
 /Name /F5
 /BaseFont /Times-Roman
 /Encoding /WinAnsiEncoding >>
 endobj
-30 0 obj
+33 0 obj
 << /Type /Font
 /Subtype /Type1
 /Name /F1
 /BaseFont /Helvetica
 /Encoding /WinAnsiEncoding >>
 endobj
-31 0 obj
+34 0 obj
 << /Type /Font
 /Subtype /Type1
 /Name /F2
 /BaseFont /Helvetica-Oblique
 /Encoding /WinAnsiEncoding >>
 endobj
-32 0 obj
+35 0 obj
 << /Type /Font
 /Subtype /Type1
 /Name /F7
@@ -226,13 +250,13 @@ endobj
 2 0 obj
 << /Type /Catalog
 /Pages 1 0 R
- /Outlines 24 0 R
+ /Outlines 27 0 R
  /PageMode /UseOutlines
  >>
 endobj
 3 0 obj
 << 
-/Font << /F3 28 0 R /F5 29 0 R /F1 30 0 R /F2 31 0 R /F7 32 0 R >> 
+/Font << /F3 31 0 R /F5 32 0 R /F1 33 0 R /F2 34 0 R /F7 35 0 R >> 
 /ProcSet [ /PDF /ImageC /Text ] >> 
 endobj
 9 0 obj
@@ -253,52 +277,55 @@ endobj
 /D [15 0 R /XYZ 85.0 327.532 null]
 >>
 endobj
-24 0 obj
+27 0 obj
 <<
- /First 25 0 R
- /Last 27 0 R
+ /First 28 0 R
+ /Last 30 0 R
 >> endobj
 xref
-0 33
+0 36
 0000000000 65535 f 
-0000005853 00000 n 
-0000005918 00000 n 
-0000006010 00000 n 
+0000006449 00000 n 
+0000006514 00000 n 
+0000006606 00000 n 
 0000000015 00000 n 
 0000000071 00000 n 
 0000000618 00000 n 
 0000000738 00000 n 
 0000000777 00000 n 
-0000006133 00000 n 
+0000006729 00000 n 
 0000000912 00000 n 
-0000006196 00000 n 
+0000006792 00000 n 
 0000001049 00000 n 
-0000006262 00000 n 
+0000006858 00000 n 
 0000001186 00000 n 
-0000003266 00000 n 
-0000003389 00000 n 
-0000003458 00000 n 
-0000003654 00000 n 
-0000003862 00000 n 
-0000004042 00000 n 
-0000004236 00000 n 
-0000004426 00000 n 
-0000004612 00000 n 
-0000006328 00000 n 
-0000004782 00000 n 
-0000004945 00000 n 
-0000005140 00000 n 
-0000005297 00000 n 
-0000005410 00000 n 
-0000005520 00000 n 
-0000005628 00000 n 
-0000005744 00000 n 
+0000003537 00000 n 
+0000003660 00000 n 
+0000003736 00000 n 
+0000003932 00000 n 
+0000004140 00000 n 
+0000004320 00000 n 
+0000004514 00000 n 
+0000004653 00000 n 
+0000004760 00000 n 
+0000004832 00000 n 
+0000005022 00000 n 
+0000005208 00000 n 
+0000006924 00000 n 
+0000005378 00000 n 
+0000005541 00000 n 
+0000005736 00000 n 
+0000005893 00000 n 
+0000006006 00000 n 
+0000006116 00000 n 
+0000006224 00000 n 
+0000006340 00000 n 
 trailer
 <<
-/Size 33
+/Size 36
 /Root 2 0 R
 /Info 4 0 R
 >>
 startxref
-6379
+6975
 %%EOF
